fixed scrollbar display for windows computers / users with mouses plugged in

--- a/src/client/assets/css/style.scss
+++ b/src/client/assets/css/style.scss
@@ -19,12 +19,21 @@ body {
         margin-right: 0px;
         margin-left: 0px;
     }
+
+    ::-webkit-scrollbar {
+        width: 4px;
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        background-color: rgba(0,0,0,0.4);
+        -webkit-border-radius: 1ex;
+    }
+    
 }
 
 // HEADER STYLES
 .header-partial {
     padding-top: 20px;
-    // padding-bottom: 20px;
     border-bottom: 1px solid rgba(0,0,0,0.10);
 
     .calendar a, .feed a {
@@ -251,7 +260,8 @@ body {
 
     .scrollable {
         max-height: calc(100vh - 83px);
-        overflow: scroll;
+        overflow-y: auto;
+        overflow-x: hidden;
         word-wrap: break-word;
         background-color: white;
     }
@@ -302,9 +312,14 @@ body {
     float: right;
     margin-right: 30px;
 
+    md-card-content {
+        padding: 0px 12px 0px 16px;
+    }
+
     .scrollable {
         background-color: white;
-        overflow: scroll;
+        overflow-y: auto;
+        overflow-x: hidden;
         height: calc(100vh - 180px);
     }
 
